--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ button {
     <!-- META -->
     <div class="meta-section">
         <div class="meta-left">
-            <div><span>Client:</span><input type="text"></div>
+            <div><span>Name:</span><input type="text"></div>
             <div><span>Address:</span><input type="text"></div>
             <div><span>Phone:</span><input type="text"></div>
             <div><span>Email:</span><input type="text"></div>
@@ -287,3 +287,4 @@ document.getElementById("date").value =
 
 </body>
 </html>
+
