--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ button {
 
     <!-- SIGNATURE (SMALL & LAST) -->
     <div class="signature-section">
-        <img src="sign.jpg">
+        <img src="signs.jpg">
         <div class="signature-line">
             Authorized Signatory
         </div>
@@ -287,4 +287,5 @@ document.getElementById("date").value =
 
 </body>
 </html>
+
 
