Fix HTML encoding issues in index.html
jpg to png

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ button {
 
     <!-- SIGNATURE (SMALL & LAST) -->
     <div class="signature-section">
-        <img src="signs.jpg">
+        <img src="signs.png">
         <div class="signature-line">
             Authorized Signatory
         </div>
@@ -287,5 +287,6 @@ document.getElementById("date").value =
 
 </body>
 </html>
+
 
 
